feat: added AuthenticityToken schema and added required request body parameters

--- a/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks.json
+++ b/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks.json
@@ -71,9 +71,7 @@
             "type": "object",
             "properties": {
               "authenticity_token": {
-                "type": "string",
-                "description": "The authenticity token",
-                "example": "valid_token"
+                "$ref": "../components/schemas/AuthenticityToken.json"
               },
               "reason_for_creation": {
                 "type": "string",
@@ -88,7 +86,12 @@
                   "example": "test@gmail.com"
                 }
               }
-            }
+            },
+            "required": [
+              "authenticity_token",
+              "reason_for_creation"
+            ],
+            "additionalProperties": false
           }
         }
       }
