--- a/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_tasks_{task_id}.json
+++ b/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_tasks_{task_id}.json
@@ -81,16 +81,19 @@
             "type": "object",
             "properties": {
               "authenticity_token": {
-                "type": "string",
-                "description": "The auth token",
-                "example": "valid_token"
+                "$ref": "../components/schemas/AuthenticityToken.json"
               },
               "completed": {
                 "type": "boolean",
                 "description": "The task being completed or not",
                 "example": true
               }
-            }
+            },
+            "required": [
+              "authenticity_token",
+              "completed"
+            ],
+            "additionalProperties": false
           }
         }
       }
