--- a/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks_{task_id}.json
+++ b/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks_{task_id}.json
@@ -81,9 +81,7 @@
             "type": "object",
             "properties": {
               "authenticity_token": {
-                "type": "string",
-                "description": "The authenticity token",
-                "example": "valid_token"
+                "$ref": "../components/schemas/AuthenticityToken.json"
               },
               "reason_for_creation": {
                 "type": "string",
@@ -103,7 +101,11 @@
                   "example": "test@gmail.com"
                 }
               }
-            }
+            },
+            "required": [
+              "authenticity_token"
+            ],
+            "additionalProperties": false
           }
         }
       }
