--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "sites-api-specifications",
+  "name": "@chillibean/sites-api-specifications",
   "private": true,
   "version": "3.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +14,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "version": "npm version && chmod +x update-version.sh && ./update-version.sh"
+    "version": "npm version && ./update-version.sh"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -27,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.0.0",
+    "@redocly/cli": "^1.26.1",
     "vite": "^4.4.5"
   }
 }
