--- a/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks_{task_id}.json
+++ b/public/refs/paths/accounts_{account_id}_sites_{site_identifier}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks_{task_id}.json
@@ -112,6 +112,7 @@
     },
     "responses": {
       "200": {
+        "description": "OK",
         "content": {
           "application/json": {
             "schema": {
