--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chillibean/sites-api-specifications",
   "private": true,
-  "version": "3.1.0",
+  "version": "3.1.0-alpha.1",
   "type": "module",
   "engines": {
     "node": ">=22"
