--- a/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks.json
+++ b/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks.json
@@ -1,11 +1,9 @@
 {
   "post": {
-    "summary": "Reorder the assets in a study procedure",
-    "description": "Reorder the assets in a study procedure",
-    "operationId": "reorderStudyProcedureAssets",
-    "tags": [
-      "Study Procedure Assets"
-    ],
+    "summary": "Create a flagged task",
+    "description": "This endpoint creates a flagged task for a study procedure",
+    "operationId": "createStudyProcedureFlaggedTask",
+    "tags": ["Study Procedure Tasks"],
     "security": [
       {
         "userSessionKey": [],
@@ -24,9 +22,9 @@
         }
       },
       {
-        "name": "site_identifier",
+        "name": "site_number",
         "in": "path",
-        "description": "The site identifier",
+        "description": "The site number",
         "required": true,
         "schema": {
           "type": "string",
@@ -65,53 +63,41 @@
       }
     ],
     "requestBody": {
-      "required": true,
       "content": {
         "application/json": {
           "schema": {
             "type": "object",
             "properties": {
-              "assets": {
-                "type": "array",
-                "items": {
-                  "type": "object",
-                  "properties": {
-                    "id": {
-                      "type": "integer",
-                      "description": "The asset id",
-                      "example": 1
-                    },
-                    "position": {
-                      "type": "integer",
-                      "description": "The asset position",
-                      "example": 1
-                    }
-                  }
-                }
-              },
               "authenticity_token": {
                 "$ref": "../components/schemas/AuthenticityToken.json"
+              },
+              "reason_for_creation": {
+                "type": "string",
+                "description": "The reason for flagging the task",
+                "example": "Please update the asset names"
+              },
+              "notify_users_list": {
+                "type": "array",
+                "description": "The list of users to notify",
+                "items": {
+                  "type": "string",
+                  "example": "test@gmail.com"
+                }
               }
             },
-            "required": [
-              "assets",
-              "authenticity_token"
-            ],
+            "required": ["authenticity_token", "reason_for_creation"],
             "additionalProperties": false
           }
         }
       }
     },
     "responses": {
-      "200": {
-        "description": "OK",
+      "201": {
+        "description": "Task flagged successfully",
         "content": {
           "application/json": {
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "../components/schemas/AssetShort.json"
-              }
+              "$ref": "../components/schemas/FlaggedTask.json"
             }
           }
         }
