--- a/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks_{task_id}.json
+++ b/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_flagged_tasks_{task_id}.json
@@ -3,9 +3,7 @@
     "summary": "Update a flagged task",
     "description": "Update a flagged task",
     "operationId": "updateStudyProcedureFlaggedTask",
-    "tags": [
-      "Study Procedure Tasks"
-    ],
+    "tags": ["Study Procedure Tasks"],
     "security": [
       {
         "userSessionKey": [],
@@ -24,9 +22,9 @@
         }
       },
       {
-        "name": "site_identifier",
+        "name": "site_number",
         "in": "path",
-        "description": "The site identifier",
+        "description": "The site number",
         "required": true,
         "schema": {
           "type": "string",
@@ -102,9 +100,7 @@
                 }
               }
             },
-            "required": [
-              "authenticity_token"
-            ],
+            "required": ["authenticity_token"],
             "additionalProperties": false
           }
         }
