--- a/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_tasks.json
+++ b/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_tasks.json
@@ -1,11 +1,9 @@
 {
-  "post": {
-    "summary": "Create a flagged task",
-    "description": "This endpoint creates a flagged task for a study procedure",
-    "operationId": "createStudyProcedureFlaggedTask",
-    "tags": [
-      "Study Procedure Tasks"
-    ],
+  "get": {
+    "summary": "Get all tasks for a study procedure",
+    "description": "Get all tasks for a study procedure",
+    "operationId": "getStudyProcedureTasks",
+    "tags": ["Study Procedure Tasks"],
     "security": [
       {
         "userSessionKey": [],
@@ -24,9 +22,9 @@
         }
       },
       {
-        "name": "site_identifier",
+        "name": "site_number",
         "in": "path",
-        "description": "The site identifier",
+        "description": "The site number",
         "required": true,
         "schema": {
           "type": "string",
@@ -64,45 +62,42 @@
         }
       }
     ],
-    "requestBody": {
-      "content": {
-        "application/json": {
-          "schema": {
-            "type": "object",
-            "properties": {
-              "authenticity_token": {
-                "$ref": "../components/schemas/AuthenticityToken.json"
-              },
-              "reason_for_creation": {
-                "type": "string",
-                "description": "The reason for flagging the task",
-                "example": "Please update the asset names"
-              },
-              "notify_users_list": {
-                "type": "array",
-                "description": "The list of users to notify",
-                "items": {
-                  "type": "string",
-                  "example": "test@gmail.com"
-                }
-              }
-            },
-            "required": [
-              "authenticity_token",
-              "reason_for_creation"
-            ],
-            "additionalProperties": false
-          }
-        }
-      }
-    },
     "responses": {
-      "201": {
-        "description": "Task flagged successfully",
+      "200": {
+        "description": "OK",
         "content": {
           "application/json": {
             "schema": {
-              "$ref": "../components/schemas/FlaggedTask.json"
+              "type": "object",
+              "properties": {
+                "tasks": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "../components/schemas/Task.json"
+                  }
+                },
+                "flagged_tasks": {
+                  "type": "object",
+                  "properties": {
+                    "tasks": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "../components/schemas/FlaggedTask.json"
+                      }
+                    },
+                    "complete": {
+                      "type": "boolean",
+                      "description": "Whether all flagged tasks are completed",
+                      "example": true
+                    }
+                  }
+                },
+                "tasks_complete": {
+                  "type": "boolean",
+                  "description": "Whether all tasks are completed",
+                  "example": true
+                }
+              }
             }
           }
         }
