--- a/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_tasks_{task_id}.json
+++ b/refs/paths/accounts_{account_id}_sites_{site_number}_subjects_{subject_number}_study_events_{study_event_identifier}_study_procedures_{study_procedure_identifier}_tasks_{task_id}.json
@@ -1,11 +1,9 @@
 {
-  "get": {
-    "summary": "Get all assets for a study procedure",
-    "description": "Get all assets for a study procedure",
-    "operationId": "getStudyProcedureAssets",
-    "tags": [
-      "Study Procedure Assets"
-    ],
+  "put": {
+    "summary": "Update a study procedure task",
+    "description": "Endpoint for updating study procedure task",
+    "operationId": "updateStudyProcedureTask",
+    "tags": ["Study Procedure Tasks"],
     "security": [
       {
         "userSessionKey": [],
@@ -24,9 +22,9 @@
         }
       },
       {
-        "name": "site_identifier",
+        "name": "site_number",
         "in": "path",
-        "description": "The site identifier",
+        "description": "The site number",
         "required": true,
         "schema": {
           "type": "string",
@@ -62,17 +60,58 @@
           "type": "string",
           "example": "PROC1"
         }
+      },
+      {
+        "name": "task_id",
+        "in": "path",
+        "description": "The task id",
+        "required": true,
+        "schema": {
+          "type": "string",
+          "example": "1"
+        }
       }
     ],
+    "requestBody": {
+      "content": {
+        "application/json": {
+          "schema": {
+            "type": "object",
+            "properties": {
+              "authenticity_token": {
+                "$ref": "../components/schemas/AuthenticityToken.json"
+              },
+              "completed": {
+                "type": "boolean",
+                "description": "The task being completed or not",
+                "example": true
+              }
+            },
+            "required": ["authenticity_token", "completed"],
+            "additionalProperties": false
+          }
+        }
+      }
+    },
     "responses": {
       "200": {
         "description": "OK",
         "content": {
           "application/json": {
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "../components/schemas/AssetShort.json"
+              "type": "object",
+              "properties": {
+                "tasks": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "../components/schemas/Task.json"
+                  }
+                },
+                "tasks_complete": {
+                  "type": "boolean",
+                  "description": "Whether all tasks are completed",
+                  "example": true
+                }
               }
             }
           }
