--- a/public/refs/components/schemas/TrialConfigurationObjectName.json
+++ b/public/refs/components/schemas/TrialConfigurationObjectName.json
@@ -1,16 +1,16 @@
 {
-  "description": "A study protocol object name",
+  "description": "A trial configuration object name",
   "type": "object",
   "properties": {
     "plural": {
       "type": "string",
-      "description": "The plural form of study protocol object name",
-      "example": "visits"
+      "description": "The plural form of trial configuration object name",
+      "example": "trial configurations"
     },
     "singular": {
       "type": "string",
-      "description": "The singular form of study protocol object name",
-      "example": "visit"
+      "description": "The singular form of trial configuration object name",
+      "example": "trial configuration"
     }
   },
   "additionalProperties": false,
